[gd_scene load_steps=8 format=2]

[ext_resource path="res://hg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 38
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 56
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.552941, 0.278431, 0.278431, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[node name="GameOver" type="Node"]
script = ExtResource( 3 )

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.195
anchor_right = 0.5
anchor_bottom = 0.195
margin_left = -163.5
margin_top = -31.8381
margin_right = 163.5
margin_bottom = 31.1619
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.365
anchor_right = 0.5
anchor_bottom = 0.365
margin_left = -107.0
margin_top = -24.8
margin_right = 108.0
margin_bottom = 25.2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.839216, 0.776471, 0.0823529, 1 )
text = "SCORE  10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.078
anchor_right = 0.5
anchor_bottom = 0.078
margin_left = -161.0
margin_top = -24.8714
margin_right = 161.0
margin_bottom = 25.1286
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.839216, 0.776471, 0.0823529, 1 )
text = "HIGH SCORE  10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.611
anchor_right = 0.5
anchor_bottom = 0.611
margin_left = -270.0
margin_top = -36.7512
margin_right = 270.0
margin_bottom = 37.2488
rect_pivot_offset = Vector2( 270.297, 37.0682 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.917647, 0.388235, 0.917647, 1 )
text = "NEW HIGH SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="retry" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.779
anchor_right = 0.5
anchor_bottom = 0.779
margin_left = -86.0
margin_top = -26.7899
margin_right = 86.0
margin_bottom = 27.2101
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "RETRY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_menu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.921
anchor_right = 0.5
anchor_bottom = 0.921
margin_left = -86.0
margin_top = -27.1489
margin_right = 86.0
margin_bottom = 26.8511
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="main_menu" to="." method="_on_main_menu_pressed"]
